# codex-manager-auth

./: .gitignore  CLAUDE.md  README.md  app_config.py  app_config.toml  debug_oa.py  main.py  pyproject.toml  test_graph.py
accout/: 宝贝信息-506260403214524162.txt  宝贝信息-751260402124217622.txt
codex_manager_auth/: __init__.py  accounts.py  app.py  callback_server.py  checkpoint.py  config.py  mail_providers.py  microsoft_mail_api.py  microsoft_oauth.py  models.py  openai_flows.py  openai_oauth.py  openai_selectors.py  outlook_mail.py  playwright_helpers.py  runner.py
docs/: msgraph-mail-guide.md
docs/superpowers/specs/: 2026-04-02-codex-auto-auth-design.md
tests/: test_account_file_parsing.py  test_app_config.py  test_browser_launch.py  test_callback_server.py  test_code_retry.py  test_execution_reporting.py  test_microsoft_mail.py  test_openai_oauth.py
